--- a/style/css/base/common.css
+++ b/style/css/base/common.css
@@ -1,13 +1,20 @@
 @charset "UTF-8";
 /*========== normal style ==========*/
 /* line 4, ../../sass/base/common.scss */
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+}
+
+/* line 7, ../../sass/base/common.scss */
 body {
   background-color: white;
   color: #4d4d4d;
   font: 12px/1.5 Arial, Helvetica, SimSun, sans-serif;
 }
 
-/* line 12, ../../sass/base/common.scss */
+/* line 15, ../../sass/base/common.scss */
 button,
 input,
 select,
@@ -16,78 +23,78 @@ textarea {
   vertical-align: middle;
 }
 
-/* line 16, ../../sass/base/common.scss */
+/* line 19, ../../sass/base/common.scss */
 button {
   cursor: pointer;
 }
 
-/* line 19, ../../sass/base/common.scss */
+/* line 22, ../../sass/base/common.scss */
 table {
   width: 100%;
 }
 
-/* line 22, ../../sass/base/common.scss */
+/* line 25, ../../sass/base/common.scss */
 img {
   vertical-align: middle;
 }
 
 /*========== text ==========*/
-/* line 27, ../../sass/base/common.scss */
+/* line 30, ../../sass/base/common.scss */
 h1, h2, h3, h4, h5, strong {
   font-weight: bold;
 }
 
-/* line 31, ../../sass/base/common.scss */
+/* line 34, ../../sass/base/common.scss */
 a {
   text-decoration: none;
 }
-/* line 34, ../../sass/base/common.scss */
+/* line 37, ../../sass/base/common.scss */
 a:link, a:visited {
   color: #0066dd;
 }
-/* line 37, ../../sass/base/common.scss */
+/* line 40, ../../sass/base/common.scss */
 a:hover {
   color: #e04b43;
   text-decoration: underline;
 }
 
-/* line 43, ../../sass/base/common.scss */
+/* line 46, ../../sass/base/common.scss */
 ol {
   margin-left: 1.6em;
   *margin-left: 2em;
 }
-/* line 48, ../../sass/base/common.scss */
+/* line 51, ../../sass/base/common.scss */
 ol li {
   list-style-type: decimal;
 }
 
-/* line 52, ../../sass/base/common.scss */
+/* line 55, ../../sass/base/common.scss */
 .fms {
   font-family: "\5FAE\8F6F\96C5\9ED1", Arial, sans-serif;
 }
 
-/* line 55, ../../sass/base/common.scss */
+/* line 58, ../../sass/base/common.scss */
 .fcn {
   font-family: SimSun;
 }
 
-/* line 58, ../../sass/base/common.scss */
+/* line 61, ../../sass/base/common.scss */
 .v-sep {
   color: #cccccc;
   margin: 0 5px;
 }
 
-/* line 62, ../../sass/base/common.scss */
+/* line 65, ../../sass/base/common.scss */
 .space {
   margin: 0 3px;
 }
 
 /*=========== solution =========*/
-/* line 67, ../../sass/base/common.scss */
+/* line 70, ../../sass/base/common.scss */
 .clearfix {
   *zoom: 1;
 }
-/* line 72, ../../sass/base/common.scss */
+/* line 75, ../../sass/base/common.scss */
 .clearfix:before, .clearfix:after {
   content: " ";
   display: block;
@@ -95,12 +102,12 @@ ol li {
   visibility: hidden;
   font-size: 0;
 }
-/* line 79, ../../sass/base/common.scss */
+/* line 82, ../../sass/base/common.scss */
 .clearfix:after {
   clear: both;
 }
 
-/* line 85, ../../sass/base/common.scss */
+/* line 88, ../../sass/base/common.scss */
 .sl-vam {
   display: table;
   border-collapse: collapse;
@@ -108,7 +115,7 @@ ol li {
   *overflow: hidden;
 }
 
-/* line 93, ../../sass/base/common.scss */
+/* line 96, ../../sass/base/common.scss */
 .sl-vam-outer {
   display: table-cell;
   vertical-align: middle;
@@ -118,7 +125,7 @@ ol li {
   *left: 50%;
 }
 
-/* line 103, ../../sass/base/common.scss */
+/* line 106, ../../sass/base/common.scss */
 .sl-vam-inner {
   text-align: center;
   margin: 0 auto;
@@ -127,12 +134,12 @@ ol li {
   *left: -50%;
 }
 
-/* line 114, ../../sass/base/common.scss */
+/* line 117, ../../sass/base/common.scss */
 .img-txt, .img-txt .txt {
   overflow: hidden;
   *zoom: 1;
 }
-/* line 116, ../../sass/base/common.scss */
+/* line 119, ../../sass/base/common.scss */
 .img-txt .img {
   float: left;
   margin-right: 10px;
