--- a/style/sass/base/_setting.scss
+++ b/style/sass/base/_setting.scss
@@ -54,4 +54,7 @@ $linkHoverColor: $red !default;
 $textColor: $grayDark !default;
 $headColor: $grayDarker !default;
 
+// border
+$baseBorder: 1px solid #e6e6e6;
+
 
