--- a/style/sass/base/common.scss
+++ b/style/sass/base/common.scss
@@ -124,3 +124,24 @@ ol{
 		@extend .img-txt;
 	}
 }
+
+.txt{
+  outline: 0;
+}
+
+input::-webkit-input-placeholder,
+textarea::-webkit-input-placeholder {
+  color: #b7cceb;
+}
+input:-moz-placeholder,
+textarea:-moz-placeholder {
+  color: #b7cceb;
+}
+input::-moz-placeholder,
+textarea::-moz-placeholder {
+  color: #b7cceb;
+}
+input:-ms-input-placeholder,
+textarea:-ms-input-placeholder {
+  color: #b7cceb;
+}
