--- a/style/sass/base/fonts.scss
+++ b/style/sass/base/fonts.scss
@@ -13,6 +13,7 @@
   font-style:normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  vertical-align: middle;
 }
 
 .iconfont-back:before { content: "\e697"; }
