--- a/style/css/module/tm.css
+++ b/style/css/module/tm.css
@@ -736,29 +736,30 @@ body {
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  width: 90px\0;
 }
 
-/* line 95, ../../sass/module/tm.scss */
+/* line 98, ../../sass/module/tm.scss */
 .header {
   padding: 20px 20px 20px 60px;
 }
-/* line 99, ../../sass/module/tm.scss */
+/* line 102, ../../sass/module/tm.scss */
 .header .info .nickname {
   line-height: 40px;
 }
-/* line 102, ../../sass/module/tm.scss */
+/* line 105, ../../sass/module/tm.scss */
 .header .info .opt {
   float: right;
   margin-top: 8px;
 }
-/* line 105, ../../sass/module/tm.scss */
+/* line 108, ../../sass/module/tm.scss */
 .header .info .opt .iconfont-set {
   display: inline-block;
   color: #fff;
   cursor: pointer;
 }
 
-/* line 114, ../../sass/module/tm.scss */
+/* line 117, ../../sass/module/tm.scss */
 .search-bar {
   width: 100%;
   height: 32px;
@@ -766,7 +767,7 @@ body {
   padding-left: 20px;
   background-color: #3387dd;
 }
-/* line 120, ../../sass/module/tm.scss */
+/* line 123, ../../sass/module/tm.scss */
 .search-bar .txt {
   margin-left: 10px;
   border: none;
@@ -774,13 +775,13 @@ body {
   color: #fff;
 }
 
-/* line 130, ../../sass/module/tm.scss */
+/* line 133, ../../sass/module/tm.scss */
 .nav-view {
   height: 528px;
   overflow-y: scroll;
 }
 
-/* line 134, ../../sass/module/tm.scss */
+/* line 137, ../../sass/module/tm.scss */
 .chat-item {
   width: 100%;
   height: 70px;
@@ -799,24 +800,25 @@ body {
 .chat-item:after {
   clear: both;
 }
-/* line 140, ../../sass/module/tm.scss */
+/* line 143, ../../sass/module/tm.scss */
 .chat-item .avatar {
   float: left;
   margin-left: -40px;
 }
-/* line 144, ../../sass/module/tm.scss */
+/* line 147, ../../sass/module/tm.scss */
 .chat-item .info {
   padding: 2px 0;
 }
-/* line 147, ../../sass/module/tm.scss */
+/* line 150, ../../sass/module/tm.scss */
 .chat-item .hd {
   overflow: hidden;
 }
-/* line 149, ../../sass/module/tm.scss */
+/* line 152, ../../sass/module/tm.scss */
 .chat-item .hd .num {
   float: right;
   height: 16px;
   line-height: 16px;
+  margin-top: 2px;
   padding: 0 2px;
   text-align: center;
   border-radius: 50%;
@@ -824,7 +826,7 @@ body {
   font-size: 11px;
   color: #fff;
 }
-/* line 159, ../../sass/module/tm.scss */
+/* line 163, ../../sass/module/tm.scss */
 .chat-item .hd .num b {
   -webkit-transform: scale(0.6);
   -moz-transform: scale(0.6);
@@ -832,54 +834,67 @@ body {
   -o-transform: scale(0.6);
   transform: scale(0.6);
 }
-/* line 165, ../../sass/module/tm.scss */
+/* line 169, ../../sass/module/tm.scss */
 .chat-item .bd {
   color: #88ccff;
+  overflow: hidden;
 }
-/* line 167, ../../sass/module/tm.scss */
+/* line 172, ../../sass/module/tm.scss */
 .chat-item .bd .msg {
   width: 100px;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
+  width: 90px\0;
   float: left;
 }
-/* line 171, ../../sass/module/tm.scss */
+/* line 179, ../../sass/module/tm.scss */
 .chat-item .bd .time {
   float: right;
 }
 
-/* line 176, ../../sass/module/tm.scss */
+/* line 184, ../../sass/module/tm.scss */
 .chat-item.on {
   background-color: #ffb600;
 }
-/* line 178, ../../sass/module/tm.scss */
+/* line 186, ../../sass/module/tm.scss */
 .chat-item.on .bd {
   color: #ffeebb;
 }
 
-/* line 188, ../../sass/module/tm.scss */
+/* line 196, ../../sass/module/tm.scss */
 .chat-area {
   float: left;
   width: 630px;
   border-right: 1px solid #e6e6e6;
 }
 
-/* line 195, ../../sass/module/tm.scss */
+/* line 204, ../../sass/module/tm.scss */
 .chat-area-hd {
   height: 50px;
   line-height: 50px;
   padding: 0 20px;
   border-bottom: 1px solid #e6e6e6;
-  overflow: hidden;
 }
-/* line 201, ../../sass/module/tm.scss */
+/* line 61, ../../sass/base/_mixin.scss */
+.chat-area-hd:before, .chat-area-hd:after {
+  content: " ";
+  display: block;
+  height: 0;
+  visibility: hidden;
+  font-size: 0;
+}
+/* line 68, ../../sass/base/_mixin.scss */
+.chat-area-hd:after {
+  clear: both;
+}
+/* line 210, ../../sass/module/tm.scss */
 .chat-area-hd h2 {
   display: inline-block;
   font-size: 16px;
   font-weight: normal;
 }
-/* line 206, ../../sass/module/tm.scss */
+/* line 215, ../../sass/module/tm.scss */
 .chat-area-hd .status {
   display: inline-block;
   width: 10px;
@@ -888,20 +903,38 @@ body {
   border-radius: 50%;
   background-color: #44cc00;
 }
-/* line 214, ../../sass/module/tm.scss */
+/* line 223, ../../sass/module/tm.scss */
 .chat-area-hd .status-off {
   background-color: #ccc;
 }
 
-/* line 220, ../../sass/module/tm.scss */
+/* line 230, ../../sass/module/tm.scss */
+.chat-tip {
+  width: 100%;
+  height: 30px;
+  line-height: 30px;
+  padding: 0 20px;
+  background-color: #f2f2f2;
+  font-size: 12px;
+  overflow: hidden;
+}
+/* line 238, ../../sass/module/tm.scss */
+.chat-tip .iconfont-close {
+  float: right;
+  cursor: pointer;
+}
+
+/* line 245, ../../sass/module/tm.scss */
 .chat-area-bd {
-  height: 425px;
+  position: relative;
+  max-height: 425px;
+  min-height: 395px;
   padding: 10px 20px;
   border-bottom: 1px solid #e6e6e6;
   overflow-y: scroll;
   font-size: 14px;
 }
-/* line 226, ../../sass/module/tm.scss */
+/* line 254, ../../sass/module/tm.scss */
 .chat-area-bd .msg-system {
   position: relative;
   margin: 10px auto;
@@ -911,28 +944,27 @@ body {
   color: #999;
   clear: both;
 }
-/* line 235, ../../sass/module/tm.scss */
+/* line 263, ../../sass/module/tm.scss */
 .chat-area-bd .msg-system-his {
   margin-top: 20px;
 }
-/* line 237, ../../sass/module/tm.scss */
+/* line 265, ../../sass/module/tm.scss */
 .chat-area-bd .msg-system-his .line {
   position: absolute;
   top: 8px;
   width: 40px;
   border-top: 1px solid #e6e6e6;
 }
-/* line 243, ../../sass/module/tm.scss */
+/* line 271, ../../sass/module/tm.scss */
 .chat-area-bd .msg-system-his .line-left {
   left: 55px;
 }
-/* line 246, ../../sass/module/tm.scss */
+/* line 274, ../../sass/module/tm.scss */
 .chat-area-bd .msg-system-his .line-right {
   right: 55px;
 }
-
-/* line 253, ../../sass/module/tm.scss */
-.msg-pre {
+/* line 279, ../../sass/module/tm.scss */
+.chat-area-bd .msg-pre {
   display: inline-block;
   width: 240px;
   padding: 10px 14px;
@@ -940,44 +972,42 @@ body {
   border: 1px solid #e6e6e6;
   background-color: #f2f2f2;
 }
-/* line 260, ../../sass/module/tm.scss */
-.msg-pre dt {
+/* line 286, ../../sass/module/tm.scss */
+.chat-area-bd .msg-pre dt {
   margin-bottom: 3px;
 }
-
-/* line 266, ../../sass/module/tm.scss */
-.msg {
+/* line 292, ../../sass/module/tm.scss */
+.chat-area-bd .msg {
   overflow: hidden;
   margin: 5px 0;
 }
-/* line 269, ../../sass/module/tm.scss */
-.msg .content {
+/* line 295, ../../sass/module/tm.scss */
+.chat-area-bd .msg .content {
   position: relative;
   max-width: 300px;
   padding: 10px;
   line-height: 21px;
   border-radius: 3px;
 }
-
-/* line 278, ../../sass/module/tm.scss */
-.msg-in {
+/* line 305, ../../sass/module/tm.scss */
+.chat-area-bd .msg-in {
   padding-left: 50px;
   float: left;
   text-align: left;
   clear: left;
 }
-/* line 283, ../../sass/module/tm.scss */
-.msg-in .avatar {
+/* line 310, ../../sass/module/tm.scss */
+.chat-area-bd .msg-in .avatar {
   float: left;
   margin-left: -50px;
 }
-/* line 287, ../../sass/module/tm.scss */
-.msg-in .content {
+/* line 314, ../../sass/module/tm.scss */
+.chat-area-bd .msg-in .content {
   display: inline-block;
   background-color: #ffeecc;
 }
-/* line 291, ../../sass/module/tm.scss */
-.msg-in .content:before {
+/* line 318, ../../sass/module/tm.scss */
+.chat-area-bd .msg-in .content:before {
   position: absolute;
   top: 13px;
   left: -16px;
@@ -992,25 +1022,24 @@ body {
   border-width: 8px;
   border-right: 8px solid #ffeecc;
 }
-
-/* line 301, ../../sass/module/tm.scss */
-.msg-out {
+/* line 329, ../../sass/module/tm.scss */
+.chat-area-bd .msg-out {
   padding-right: 50px;
   float: right;
   text-align: right;
   clear: right;
 }
-/* line 306, ../../sass/module/tm.scss */
-.msg-out .avatar {
+/* line 334, ../../sass/module/tm.scss */
+.chat-area-bd .msg-out .avatar {
   float: right;
   margin-right: -50px;
 }
-/* line 310, ../../sass/module/tm.scss */
-.msg-out .content {
+/* line 338, ../../sass/module/tm.scss */
+.chat-area-bd .msg-out .content {
   background-color: #ddeeff;
 }
-/* line 312, ../../sass/module/tm.scss */
-.msg-out .content:after {
+/* line 340, ../../sass/module/tm.scss */
+.chat-area-bd .msg-out .content:after {
   position: absolute;
   top: 13px;
   right: -16px;
@@ -1025,13 +1054,23 @@ body {
   border-width: 8px;
   border-left: 8px solid #ddeeff;
 }
-/* line 320, ../../sass/module/tm.scss */
-.msg-out .msg-failed {
+/* line 348, ../../sass/module/tm.scss */
+.chat-area-bd .msg-out .msg-failed {
   margin-top: 5px;
   font-size: 12px;
   text-align: left;
 }
-/* line 324, ../../sass/module/tm.scss */
-.msg-out .msg-failed .iconfont-information {
+/* line 352, ../../sass/module/tm.scss */
+.chat-area-bd .msg-out .msg-failed .iconfont-information {
   color: red;
+}
+
+/* line 365, ../../sass/module/tm.scss */
+.chat-edit .toolbar {
+  padding: 4px 17px;
+}
+/* line 367, ../../sass/module/tm.scss */
+.chat-edit .toolbar .iconfont {
+  margin-right: 5px;
+  cursor: pointer;
 }
