--- a/style/sass/module/tm.scss
+++ b/style/sass/module/tm.scss
@@ -87,6 +87,9 @@ body{
       vertical-align: top;
       text-decoration: none;
       @include text-clip(110px);
+      @if($ie8){
+        width: 90px\0;
+      }
     }
   }
 }
@@ -150,6 +153,7 @@ body{
       float: right;
       height: 16px;
       line-height: 16px;
+      margin-top: 2px;
       padding: 0 2px;
       text-align: center;
       border-radius: 50%;
@@ -164,8 +168,12 @@ body{
   // 消息
   .bd{
     color: #88ccff;
+    overflow: hidden;
     .msg{
       @include text-clip(100px);
+      @if($ie == true){
+        width: 90px\0;
+      }
       float: left;
     }
     .time{
@@ -189,6 +197,7 @@ body{
   float: left;
   width: 630px;
   border-right: $baseBorder;
+
 }
 
 // chat-area-hd
@@ -197,7 +206,7 @@ body{
   line-height: 50px;
   padding: 0 20px;
   border-bottom: $baseBorder;
-  overflow: hidden;
+  @include clearfix();
   h2{
     display: inline-block;
     font-size: 16px;
@@ -214,15 +223,34 @@ body{
   .status-off{
     background-color: #ccc;
   }
+
+}
+
+// 提示消息
+.chat-tip{
+  width: 100%;
+  height: 30px;
+  line-height: 30px;
+  padding: 0 20px;
+  background-color: #f2f2f2;
+  font-size: 12px;
+  overflow: hidden;
+  .iconfont-close{
+    float: right;
+    cursor: pointer;
+  }
 }
 
 // chat-area-bd
 .chat-area-bd{
-  height: 425px;
+  position: relative;
+  max-height: 425px;
+  min-height: 395px;
   padding: 10px 20px;
   border-bottom: $baseBorder;
   overflow-y: scroll;
   font-size: 14px;
+  // 系统消息
   .msg-system{
     position: relative;
     margin: 10px auto;
@@ -247,88 +275,101 @@ body{
       right: 55px;
     }
   }
-}
-
-// 预置消息
-.msg-pre{
-  display: inline-block;
-  width: 240px;
-  padding: 10px 14px;
-  margin: 10px 0;
-  border: $baseBorder;
-  background-color: #f2f2f2;
-  dt{
-    margin-bottom: 3px;
-  }
-}
-
-// 聊天消息
-.msg{
-  overflow: hidden;
-  margin: 5px 0;
-  .content{
-    position: relative;
-    max-width: 300px;
-    padding: 10px;
-    line-height: 21px;
-    border-radius: 3px;
-  }
-}
-
-.msg-in{
-  padding-left: 50px;
-  float: left;
-  text-align: left;
-  clear: left;
-  .avatar{
-    float: left;
-    margin-left: -50px;
-  }
-  .content{
+  // 预置消息
+  .msg-pre{
     display: inline-block;
-    background-color: #ffeecc;
-
-    &:before{
-      position: absolute;
-      top: 13px;
-      left: -16px;
-      content: "";
-      @include triangle-left(8px,#ffeecc);
+    width: 240px;
+    padding: 10px 14px;
+    margin: 10px 0;
+    border: $baseBorder;
+    background-color: #f2f2f2;
+    dt{
+      margin-bottom: 3px;
     }
   }
-}
 
-.msg-out{
-  padding-right: 50px;
-  float: right;
-  text-align: right;
-  clear: right;
-  .avatar{
-    float: right;
-    margin-right: -50px;
-  }
-  .content{
-    background-color: #ddeeff;
-    &:after{
-      position: absolute;
-      top: 13px;
-      right: -16px;
-      content: "";
-      @include triangle-right(8px,#ddeeff);
+  // 聊天消息
+  .msg{
+    overflow: hidden;
+    margin: 5px 0;
+    .content{
+      position: relative;
+      max-width: 300px;
+      padding: 10px;
+      line-height: 21px;
+      border-radius: 3px;
     }
   }
-  .msg-failed{
-    margin-top: 5px;
-    font-size: 12px;
+
+  // 接收消息
+  .msg-in{
+    padding-left: 50px;
+    float: left;
     text-align: left;
-    .iconfont-information{
-      color: red;
+    clear: left;
+    .avatar{
+      float: left;
+      margin-left: -50px;
+    }
+    .content{
+      display: inline-block;
+      background-color: #ffeecc;
+
+      &:before{
+        position: absolute;
+        top: 13px;
+        left: -16px;
+        content: "";
+        @include triangle-left(8px,#ffeecc);
+      }
     }
   }
+
+  // 发送消息
+  .msg-out{
+    padding-right: 50px;
+    float: right;
+    text-align: right;
+    clear: right;
+    .avatar{
+      float: right;
+      margin-right: -50px;
+    }
+    .content{
+      background-color: #ddeeff;
+      &:after{
+        position: absolute;
+        top: 13px;
+        right: -16px;
+        content: "";
+        @include triangle-right(8px,#ddeeff);
+      }
+    }
+    .msg-failed{
+      margin-top: 5px;
+      font-size: 12px;
+      text-align: left;
+      .iconfont-information{
+        color: red;
+      }
+    }
+  }
+
 }
 
 
 
+// 输入区域
+//===============================================================================
+.chat-edit{
+  .toolbar{
+    padding: 4px 17px;
+    .iconfont{
+      margin-right: 5px;
+      cursor: pointer;
+    }
+  }
+}
 
 
 
